# mopyle4_cfn-drift-extended

./: README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: new-service-collectors-design.md
integration-tests/: drift-report.json  introduce-drift.sh  template.yaml
provenance-experiment/: test-stack.yaml
scripts/: live-provenance-test.sh
src/cfn_drift_extended/: _auditor_utils.py  auditor.py  cli.py  models.py  orphan_auditor.py
src/cfn_drift_extended/collectors/: __init__.py  _aws.py  _datetime_utils.py  cfn_eventbridge_extractor.py  cfn_managed_index.py  cfn_sg_extractor.py  cfn_sns_sqs_extractor.py  eventbridge_collector.py  iam_orphan_collector.py  lambda_collector.py  lambda_orphan_collector.py  orphan_filters.py  provenance_lookup.py  sg_collector.py  sg_orphan_collector.py  sns_sqs_collector.py  sqs_sns_orphan_collector.py
src/cfn_drift_extended/comparators/: __init__.py  eventbridge_comparator.py  sg_comparator.py  sns_sqs_comparator.py
src/cfn_drift_extended/reporters/: console.py
tests/: conftest.py  test_auditor.py  test_cfn_collector.py  test_cfn_managed_index.py  test_cli.py  test_eventbridge_collector.py  test_eventbridge_comparator.py  test_eventbridge_error_paths.py  test_orphan_auditor.py  test_sg_collector.py  test_sg_comparator.py  test_sg_error_paths.py  test_sns_sqs_collector.py  test_sns_sqs_comparator.py  test_sns_sqs_error_paths.py  test_sqs_sns_orphan_collector.py
